testing/macro-tests/tests/ui/store_multiple_storage_modes.stderr
error: storage(...) requires exactly one storage mode: stable(...), heap(), or journaled(...)
  --> tests/ui/store_multiple_storage_modes.rs:10:5
   |
10 |     storage(
   |     ^^^^^^^
